<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".MainActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/bg_gradient_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/logoCircle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_circle_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/logoCircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="-40dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/background_card"
        app:layout_constraintTop_toBottomOf="@id/headerBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                style="@style/TitleText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingresa tus credenciales para continuar"
                style="@style/SubtitleText"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                style="@style/InputField"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:drawablePadding="12dp"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                style="@style/InputField"
                android:drawableStart="@android:drawable/ic_lock_idle_lock"
                android:drawablePadding="12dp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/btnLoginMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tvGoToRegisterMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_go_to_register"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>